Pull request #349: AG-12333 fix outline
Merge in EXTENSIONS/vpn-extension from fix/AG-12333 to master

Squashed commit of the following:

commit dcc6870182eaacbae5061a912a4a9300ee33cbbd
Merge: 5f3a52be f268fedc
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Jan 20 13:56:47 2022 +0300

    Merge branch 'master' into fix/AG-12333

commit 5f3a52bea06313f13f98b098a37b446b26fa4228
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Jan 20 13:38:17 2022 +0300

    AG-12333 fix outline

--- a/src/options/styles/button.pcss
+++ b/src/options/styles/button.pcss
@@ -181,6 +181,7 @@
     background: transparent;
     transform: rotate(180deg);
     padding: 12px 8px 5px 16px;
+    outline: none;
 
     &:hover {
         filter: brightness(.7);
